# Domcraft

./: Cargo.toml  README.md  TODO  fixed64.py
shaders/: shader.wgsl  sky.wgsl  terrain.wgsl
src/: chunk_worker_pool.rs  main.rs  renderer.rs  stolen.rs  util.rs  world.rs
src/renderer/: buffer.rs  texture.rs  vertex_buffer.rs
src/world/: block.rs  chunk.rs  chunk_worker_pool.rs  chunkedterrain.rs  controls.rs  player.rs  terrain.rs
