[package]
name = "domcraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.13.1"
pollster = "0.2.5"
winit = "0.27.2"
bytemuck = "1.11.0"
bytemuck_derive = "1.1.1"
cgmath = "0.18.0"
itertools = "0.10.3"
image = "0.24.3"
noise = "0.7.0"