[package]
name = "domcraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.18.0"
pollster = "0.2.5"
winit = "0.27.2"
bytemuck = "1.11.0"
bytemuck_derive = "1.1.1"
cgmath = "0.18.0"
itertools = "0.12.0"
image = "0.24.3"
noise = "0.7.0"
num_cpus = "1.0"
num-iter = "0.1.43"
fixed = "1.24.0"
imgui = "0.11.0"